--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
         "build": "tsc",
         "start": "node dist/index.js",
         "prisma:generate": "prisma generate",
-        "prisma:migrate": "prisma migrate dev"
+        "prisma:migrate": "prisma migrate dev",
+        "db:seed": "ts-node src/seed.ts"
     },
     "dependencies": {
         "@prisma/client": "^5.22.0",
