--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,11 @@
         "start": "node dist/index.js",
         "prisma:generate": "prisma generate",
         "prisma:migrate": "prisma migrate dev",
-        "db:seed": "ts-node src/seed.ts"
+        "db:seed": "ts-node prisma/seed.ts",
+        "db:reset": "prisma migrate reset --force"
+    },
+    "prisma": {
+        "seed": "ts-node prisma/seed.ts"
     },
     "dependencies": {
         "@google-cloud/storage": "^7.19.0",
